samples/errors/syntax-error/module.ts
import { declareModule } from '../../../src/runtime/runtime';

declareModule(
    // Testing syntax error
    ;&^#-*/
);
